--- a/OurNewProject/Views/Users/Register.cshtml
+++ b/OurNewProject/Views/Users/Register.cshtml
@@ -2,87 +2,30 @@
 
 @{
     ViewData["Title"] = "Register";
-    // Layout = "_LogInLayout";
 }
-@*
-    <h1>Sign up</h1>
+<link rel="stylesheet" href="~/css/login-logout.css" />
 
+<div class="wrapper fadeInDown">
+    <div id="formContent">
+        <!-- Tabs Titles -->
+        <a class="inactive underlineHover" asp-action="Login"> Sign in </a>
+        <a> </a>
+        <a class="inactive underlineHover" asp-action="Register"> Sign up </a>
 
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Register">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="UserName" class="control-label"></label>
-                    <input asp-for="UserName" class="form-control" />
-                    <span asp-validation-for="UserName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password" class="control-label"></label>
-                    <input asp-for="Password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <input type="submit" value="Sign up" class="btn btn-primary" />
-                </div>
-            </form>
-
-            @if (ViewBag.Error != null)
-            {
-                <div class="text-danger">@ViewBag.Error </div>
-
-            }
-
-        </div>
-    </div>
-
-    <div>
-        Already registered? <a asp-action="LogIn">Click here to Log In </a>
-    </div>
-
-    @section Scripts {
-        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    }*@
-
-
-<hr />
-
-
-<div id="login-box">
-    <div class="left">
-        <h1>Sign up</h1>
         <form asp-action="Register">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
-                <input asp-for="UserName" class="form-control" placeholder="Username" type="text" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
+            <input type="text" asp-for="UserName" class="fadeIn placeholder="Username" />
+            <input type="text" asp-for="Password" class="fadeIn placeholder="Password" />
+            <input type="submit" value="Sign up" class="btn btn-primary" />
 
-            <div class="form-group">
-                <input asp-for="Password" class="form-control" placeholder="Password" type="password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-
-            <input type="submit" value="Register" class="btn btn-primary" />
-            <div>
-                <br />
-                Already a member ?<br /><a asp-action="Login">Click here</a> to login.
-            </div>
         </form>
         @if (ViewBag.Error != null)
         {
             <div class="text-danger">@ViewBag.Error </div>
         }
-    </div>
 
-    <div class="right">
-        <br /><br /><br /><br /><br /><br />
-        <button class="social-signin facebook">Log in with facebook</button>
+
     </div>
-    <div class="or">OR</div>
 </div>
 
 
