--- a/OurNewProject/wwwroot/css/login-logout.css
+++ b/OurNewProject/wwwroot/css/login-logout.css
@@ -3,7 +3,7 @@
 /* BASIC */
 
 html {
-	background-color: #56baed;
+	background-color:rgb(252 252 252 / 0.00);
 }
 
 body {
@@ -57,7 +57,7 @@ h2 {
 }
 
 #formFooter {
-	background-color: #f6f6f6;
+	/*background-color: #3419ab;*/
 	border-top: 1px solid #dce8f1;
 	padding: 25px;
 	text-align: center;
@@ -83,7 +83,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset] {
-	background-color: #56baed;
+	background-color: rgb(39 173 188 / 0.44);
 	border: none;
 	color: white;
 	padding: 15px 80px;
@@ -105,7 +105,7 @@ input[type=button], input[type=submit], input[type=reset] {
 }
 
 	input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover {
-		background-color: #39ace7;
+		background-color: rgb(39 173 188 / 0.44);
 	}
 
 	input[type=button]:active, input[type=submit]:active, input[type=reset]:active {
@@ -117,7 +117,7 @@ input[type=button], input[type=submit], input[type=reset] {
 	}
 
 input[type=text] {
-	background-color: #f6f6f6;
+	background-color: rgb(39 173 188 / 0.07);
 	border: none;
 	color: #0d0d0d;
 	padding: 15px 32px;
@@ -138,7 +138,7 @@ input[type=text] {
 }
 
 	input[type=text]:focus {
-		background-color: #fff;
+		background-color: rgb(39 173 188 / 0.44);
 		border-bottom: 2px solid #5fbae9;
 	}
 
@@ -263,7 +263,7 @@ input[type=text] {
 	bottom: -10px;
 	width: 0;
 	height: 2px;
-	background-color: #56baed;
+	background-color: rgb(39 173 188 / 0.44);
 	content: "";
 	transition: width 0.2s;
 }
