--- a/OurNewProject/Views/Users/LogIn.cshtml
+++ b/OurNewProject/Views/Users/LogIn.cshtml
@@ -70,9 +70,9 @@
         </form>*@
         <form asp-action="Login">
 
-            <input type="text" asp-for="UserName" class="fadeIn placeholder="Username" />
+            <input type="text" id="User Name" asp-for="UserName" class="fadeIn" placeholder="Username" />
             <p></p>
-            <input type="text" asp-for="Password" class="fadeIn placeholder="Password" />
+            <input type="text" id="password" asp-for="Password" class="fadeIn" placeholder="Password" />
             <p></p>
             <input type="submit" value="Login" class="btn btn-primary" />
 
