--- a/OurNewProject/Views/ProductImages/Index.cshtml
+++ b/OurNewProject/Views/ProductImages/Index.cshtml
@@ -28,7 +28,11 @@
                 @Html.DisplayFor(modelItem => item.product.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Imge)
+
+               
+                <img src="@Url.Content(item.Imge)" width="60" height="60"></img>
+
+
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
