--- a/OurNewProject/Views/Home/Hyadata.cshtml
+++ b/OurNewProject/Views/Home/Hyadata.cshtml
@@ -25,8 +25,17 @@
 
     <header>
         <div class="text-center"> <h1 class="display-4"> הידעת?  </h1></div>
+
     </header>
-   
+
+    <div>
+        <h2>
+            <div class="text-center"> <h1 class="display-4"> כנראה שלא אז...  </h1></div>
+        </h2>
+    </div>
+    <pre>
+
+    </pre>
     <div class="text-right">
         <div class="container">
             <div class="card">
@@ -43,12 +52,12 @@
                     </h4>
                     @*<p>An exploration into the trucks polarising design</p>*@
                     @* <div class="user">
-                    <img src="https://i.postimg.cc/Hk7N71W2/user-1.jpg" alt="user 1" />
-                    <div class="user-info">
-                        <h5>Carrie Brewer</h5>
-                        <small>2h ago</small>
-                    </div>
-                </div>*@
+                            <img src="https://i.postimg.cc/Hk7N71W2/user-1.jpg" alt="user 1" />
+                            <div class="user-info">
+                                <h5>Carrie Brewer</h5>
+                                <small>2h ago</small>
+                            </div>
+                        </div>*@
                 </div>
             </div>
             <div class="card">
@@ -175,10 +184,10 @@
                 </div>
                 <div class="card-body">
                     <span class="tag tag-teal">
-                       נולדו עם כפית של זהב בפה
+                        נולדו עם כפית של זהב בפה
                     </span>
                     <h4> טועמי גלידה טועמים את הגלידה בעזרת כפית מזהב, כדי שלא ירגישו שום סוג של טעם לוואי שעלול להיות בכפית רגילה.</h4>
-                    
+
                 </div>
             </div>
 
