--- a/OurNewProject/Views/Products/Menu.cshtml
+++ b/OurNewProject/Views/Products/Menu.cshtml
@@ -14,42 +14,39 @@
 
 
 @*<section id="our_menu" class="pt-5 pb-5">*@
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="page_title text-center mb-4">
-                    <h1>our menu</h1>
-                    <div class="single_line"></div>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="page_title text-center mb-4">
+                <h1>our menu</h1>
+                <div class="single_line"></div>
             </div>
         </div>
+    </div>
 
-  @*      <div class="row">
-            <ul class="nav nav-tabs menu_tab mb-4" id="myTab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="breakfast-tab" data-toggle="tab" href="#breakfast" role="tab">גלידות</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="lunch-tab" data-toggle="tab" href="#lunch" role="tab">תוספות</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="dinner-tab" data-toggle="tab" href="#dinner" role="tab">Dinner</a>
-                </li>
-            </ul>
-        </div>*@
+    <div class="row">
+        <ul class="nav nav-tabs menu_tab mb-4" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="breakfast-tab" data-toggle="tab" href="#breakfast" role="tab">גלידות</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="lunch-tab" data-toggle="tab" href="#lunch" role="tab">יוגורטים</a>
+            </li>
+        </ul>
+    </div>
 
-        @foreach (var item in Model)
-        {
-            
-            <div class="tab-pane fade show active" role="tabpanel">
+    @foreach (var item in Model)
+    {
+
+            <div class="tab-pane fade show active" id="breakfast" role="tabpanel" aria-labelledby="breakfast-tab">
                 <div class="row">
                     <div class="col-md-8">
                         <div class="single_menu">
-                            <img src="@Url.Content(item.productImage.Imge)"></img>
-                          @*  <img src="https://did.li/PFMw5">*@
+                            @*    <img src="@Url.Content(item.productImage.Imge)"></img>*@
+                            <img src="https://did.li/PFMw5">
                             <div class="menu_content">
-                                <h4>    @Html.DisplayFor(modelItem => item.Name)  <span>  ₪ </span> <span> @Html.DisplayFor(modelItem => item.Price)</span>  </h4>
-                                <p> @Html.DisplayFor(modelItem => item.Description)</p>
+                                <h4 class="text-center">    @Html.DisplayFor(modelItem => item.Name)  <span>  ₪ </span> <span> @Html.DisplayFor(modelItem => item.Price)</span>  </h4>
+                                <p class="text-center"> @Html.DisplayFor(modelItem => item.Description)</p>
                             </div>
                         </div>
                     </div>
@@ -57,12 +54,11 @@
                 </div>
                 <button>add to cart</button>
             </div>
-
-        }
-
+    }
 
 
-    </div>
+
+</div>
 @*</section>*@
 
 
