--- a/OurNewProject/wwwroot/css/Menu.css
+++ b/OurNewProject/wwwroot/css/Menu.css
@@ -1,4 +1,27 @@
-﻿.page_title {
+﻿
+.menu-btns {
+    padding: 0.6rem 0;
+    display: flex;
+    justify-content: center;
+}
+
+
+.button {
+    background-color: #dc3545;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+
+
+.page_title {
     padding: 30px 0px;
 }
 
@@ -10,7 +33,6 @@
         position: relative;
         text-transform: capitalize;
     }
-
         .page_title h1::before {
             background: #c0392b;
             width: 70px;
@@ -32,124 +54,33 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-/*Menu starts*/
-.menu_tab {
-    margin: 0 auto;
-    justify-content: center;
-}
 
-.nav-item {
-    display: inline-block;
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
     text-align: center;
+    font-family: arial;
 }
 
-.nav-tabs .nav-link {
-    transition: .3s;
+.price {
+    color: grey;
+    font-size: 22px;
 }
 
-    .nav-tabs .nav-link.active {
-        background: #c0392b;
-        color: #fff;
-        font-weight: 700;
-        border: 1px solid #c0392b;
-        text-transform: capitalize;
-    }
-
-.nav-link {
-    color: #000;
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #dc3545;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
 }
 
-.nav-tabs .nav-link:hover {
-    background: #c0392b;
-    color: #fff;
-    border: 1px solid #c0392b;
-}
-
-.single_menu {
-    position: relative;
-    margin-bottom: 70px;
-    transition: .3s;
-}
-
-    .single_menu:hover img {
-        -webkit-clip-path: polygon(0% 0%, 100% 0, 100% 50%, 100% 100%, 0% 100%);
-        clip-path: polygon(0% 0%, 100% 0, 100% 50%, 100% 100%, 0% 100%);
-    }
-
-    .single_menu img {
-        width: 33%;
-        position: absolute;
-        height: 140px;
-        -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-        clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-        transition: .3s;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-    }
-
-.menu_content {
-    padding-left: 200px;
-}
-
-    .menu_content h4 {
-        font-size: 25px;
-        font-weight: 300;
-        border-bottom: 1px dashed #c0392b;
-        line-height: 2;
-        text-transform: capitalize;
-    }
-
-        .menu_content h4 span {
-            font-size: 25px;
-            font-weight: 800;
-            float: right;
-            font-style: italic;
-            color: #c0392b;
-        }
-
-    .menu_content p {
-        font-weight: 200;
-        font-size: 16px;
-        letter-spacing: 1px;
-    }
-
-.menu_btn.btn.btn-danger {
-    margin: 0 auto;
-    display: block;
-    width: 140px;
-}
-/*Menu ends*/
-.menu_btn.btn.btn-danger {
-    margin: 0 auto;
-    display: block;
-    width: 140px;
-}
-
-.btn.btn-danger {
-    background: #c0392b;
-    border: 1px solid #c0392b;
-    transition: .3s;
-    position: relative;
-    z-index: 1;
-    text-transform: capitalize;
-    font-weight: 700;
-    overflow: hidden;
-    padding: 15px 25px;
-}
-
-    .btn.btn-danger::before {
-        position: absolute;
-        content: '';
-        background: #e74c3c;
-        width: 100%;
-        height: 100%;
-        left: -100%;
-        top: 100%;
-        transition: .3s;
-        z-index: -1;
-    }
-
-    .btn.btn-danger:hover:before {
-        top: 0;
-        left: 0;
+    .card button:hover {
+        opacity: 0.7;
     }
