--- a/OurNewProject/Views/Home/Index.cshtml
+++ b/OurNewProject/Views/Home/Index.cshtml
@@ -2,15 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<!--<div class="text-center">-->
+     תמונה של הלוגו   
 
 
-    @*     תמונה של הלוגו   *@
+ תמונה של גלידות
 
-
-    @* תמונה של גלידות*@
-
-    <h1 class="display-4">Welcome</h1>
+<h1 class="display-4">Welcome</h1>
     <p>
 
         <img src="https://www.nizat.com/userfiles/images/shutterstock_1500504500.jpg" width="1000" height="1000" class="img-fluid">
@@ -19,3 +17,5 @@
 
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+
