--- a/OurNewProject/Views/Products/menuTest.cshtml
+++ b/OurNewProject/Views/Products/menuTest.cshtml
@@ -5,56 +5,45 @@
 }
 
 
-<head>
-    <link rel="stylesheet" href="~/css/Menu.css">
+@*<head>
+        <link rel="stylesheet" href="~/js/test.js">
 
-</head>
+    </head>*@
 
+<a>
+    ajax test
+</a>
 
+<html>
+<body>
 
-
-@*<section id="our_menu" class="pt-5 pb-5">*@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="page_title text-center mb-4">
-                <h1>our menu</h1>
-                <div class="single_line"></div>
-            </div>
-        </div>
+    <div id="demo">
+        <h2>The XMLHttpRequest Object</h2>
+        <button type="button" onclick="loadDoc()">Change Content</button>
     </div>
 
-    <div class="menu-btns">
-        <form asp-action="Buttom"> <button value="" class="button" id="allCat">הכל</button></form>
-        <form asp-action="Buttom"> <button value="גלידות" type="submit" class="button" name="ctN">גלידות</button></form>
-        <form asp-action="Buttom"> <button value="יוגורטים" type="submit" class="button" name="ctN">יוגורטים</button></form>
+    <script>
+        function loadDoc() {
+            jQuery(function ($) {
+                $('#filter').submit(function () {
+                    var filter = $('#filter');
+                    $.ajax({
+                        url: filter.attr('action'),
+                        data: filter.serialize(), // form data
+                        type: filter.attr('method'), // POST
+                        beforeSend: function (xhr) {
+                            filter.find('button').text('Processing...'); // changing the button label
+                        },
+                        success: function (data) {
+                            filter.find('button').text('Apply filter'); // changing the button label back
+                            $('#response').html(data); // insert data
+                        }
+                    });
+                    return false;
+                });
+            });
+        }
+    </script>
 
-    </div>
-    @foreach (var item in Model)
-    {
-
-            <div class="tab-pane fade show active" id="breakfast" role="tabpanel" aria-labelledby="breakfast-tab">
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="single_menu">
-                            @*    <img src="@Url.Content(item.productImage.Imge)"></img>*@
-                            <img src="https://did.li/PFMw5">
-                            <div class="menu_content">
-                                <h4 class="text-center">    @Html.DisplayFor(modelItem => item.Name)  <span>  ₪ </span> <span> @Html.DisplayFor(modelItem => item.Price)</span>  </h4>
-                                <p class="text-center"> @Html.DisplayFor(modelItem => item.Description)</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <button>add to cart</button>
-            </div>
-    }
-
-
-
-</div>
-@*</section>*@
-
-
-
+</body>
+</html>
