--- a/OurNewProject/Views/Users/Statistics.cshtml
+++ b/OurNewProject/Views/Users/Statistics.cshtml
@@ -42,13 +42,13 @@
                         </thead>
 
                         <tbody>
-                           @* @foreach (var v in ViewBag.data as ICollection<Stat>)
+                            @foreach (var v in ViewBag.data as ICollection<Stat>)
                             {
                                 <tr>
                                     <th> @v.Key</th>
                                     <th>@v.Values</th>
                                 </tr>
-                            }*@
+                            }
                         </tbody>
                     </table>
 
@@ -100,13 +100,13 @@
                     </thead>
 
                     <tbody>
-                       @* @foreach (var v in ViewBag.data2 as ICollection<Stat>)
+                        @foreach (var v in ViewBag.data2 as ICollection<Stat>)
                         {
                             <tr>
                                 <th> @v.Key</th>
                                 <th>@v.Values</th>
                             </tr>
-                        }*@
+                        }
                     </tbody>
                 </table>
 
