--- a/OurNewProject/wwwroot/css/site.css
+++ b/OurNewProject/wwwroot/css/site.css
@@ -14,9 +14,9 @@ a {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #5c90c9d1;
+    border-color: #5c90c9d1;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
