--- a/OurNewProject/Views/Users/LogIn.cshtml
+++ b/OurNewProject/Views/Users/LogIn.cshtml
@@ -8,8 +8,7 @@
 @*<head>
         <link rel="stylesheet" href="~/css/loginpage.css" />
     </head>*@
-<link rel="stylesheet" href="~/css/login-logout.css" />
-
+<link rel="stylesheet" href="~/css/log-out.css" />
 @*
     <div id="login-box">
         <div class="left">
