--- a/OurNewProject/Views/Home/About.cshtml
+++ b/OurNewProject/Views/Home/About.cshtml
@@ -3,24 +3,11 @@
     ViewData["Title"] = "About";
 }
 
+
 <head>
-
-
-    <style>
-
-        .textabout {
-            background-color: white;
-            display: table;
-            margin: auto;
-            border-radius: 2px;
-            opacity: 95%;
-            width: 720px;
-        }
-
-    </style>
-
-
+    <link rel="stylesheet" href="~/css/About.css" />
 </head>
+
 <div class="text-center">
 
     <u1>
@@ -63,7 +50,6 @@
 
                 <!--Google Maps-->
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3384.6900954119606!2d34.77224248575843!3d31.969303132036828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f69a0c1b27%3A0x9df60473d5201ec3!2z15DXnNeZINeV15nXltecIDEwLCDXqNeQ16nXldefINec16bXmdeV158!5e0!3m2!1siw!2sil!4v1627570605134!5m2!1siw!2sil" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
 
             </div>
             <br />
