--- a/OurNewProject/Views/Home/Team.cshtml
+++ b/OurNewProject/Views/Home/Team.cshtml
@@ -7,49 +7,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-    <style>
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            max-width: 300px;
-            margin: auto;
-            text-align: center;
-            font-family: arial;
-        }
-
-        .title {
-            color: grey;
-            font-size: 18px;
-        }
-
-        button {
-            border: none;
-            outline: 0;
-            display: inline-block;
-            padding: 8px;
-            color: white;
-            background-color: #000;
-            text-align: center;
-            cursor: pointer;
-            width: 100%;
-            font-size: 18px;
-        }
-
-        a {
-            text-decoration: none;
-            font-size: 22px;
-            color: black;
-        }
-
-
-            button:hover, a:hover {
-                opacity: 0.7;
-            }
-
-        haz {
-            font-family: "Sofia", sans-serif;
-            font-size :larger;
-        }
-    </style>
+    <link rel="stylesheet" href="~/css/Team.css">
 </head>
 <body>
     <pre>
@@ -58,9 +16,8 @@
     <haz>
         <h1 style="text-align:center">Our Team</h1>
       
-        <pre>
+        <pre></pre>
 
-    </pre>
         <div class="row">
             <div class="card">
                 <img src="https://scontent.ftlv6-1.fna.fbcdn.net/v/t1.6435-9/124018461_3442015669250358_4730789914904953842_n.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=Vwc7FHeZw48AX8x7XDN&tn=BACNfLudBkk3VGcy&_nc_ht=scontent.ftlv6-1.fna&oh=faa5fc6e1bc17ef2d5f53c8ea2b91967&oe=61278CF9" alt="Zehava" style="width:100%" height="297.72">
